@@ -1,6 +1,7 @@
 30 April 2007
 
-* Verify SSL certificates.
+* Verify SSL certificates. By default but can be disabled per-account by
+  appending a "no-verify" flag to the definition.
 * Option to use PCRE (build with make -DPCRE).
 
 19 April 2007
@@ -263,4 +264,4 @@
   the mail was very rarely reallocated, now that the header is added it is.
 * Changed all the descriptions to static buffers and audited use of snprintf.
 
-$Id: CHANGES,v 1.71 2007-04-30 21:50:49 nicm Exp $
+$Id: CHANGES,v 1.72 2007-04-30 22:30:06 nicm Exp $
